# hackathon-meta-hf-scaler

./: .dockerignore  .gitignore  Dockerfile  ExampleRequest.MD  README.md  SUBMISSION_CHECKLIST.md  app.py  inference.py  main.py  openenv.yaml  prove_collapse.py  pyproject.toml  requirements.txt  validate_contract.py
agents/: __init__.py  heuristic_agent.py  random_agent.py
api/: __init__.py
baseline/: __init__.py  run_baseline.py
baseline/results/: baseline_results.json
configs/: order_fulfillment.yaml
env/: __init__.py  codec.py  environment.py  reward.py  spaces.py  state.py
environments/: __init__.py  email_triage_env.py  openenv.yaml  order_fulfillment_env.py
openenv/: __init__.py  action.py  base_env.py  cli.py  config.py  engine.py  grader.py  llm_training.py  logger.py  models.py  replay.py  runtime_config.py  state.py  task_loader.py  tasks.py  validation.py  vector_env.py
openenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scenarios/: sample_tasks.json  task_scenarios.schema.json
scripts/: grade_task.py  precheck.sh  sync_manifest.py  train_heuristic.py  train_llm.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
tests/: test_app.py  test_baseline.py  test_email_triage.py  test_grader.py  test_inference.py  test_llm_training.py  test_rl_env.py  test_submission_contract.py  test_task_loader.py
